classDiagram
    class LFDPlanner {
        -demo_name
        -duration
        -goal
        +runViz()
        +runExec()
        -visualizePlan()
        -getPlan()
    }
    class LFDRecorder {
        -record_rate
        +run(demo_name)
        -robotHasMoved()
    }
    class LFDTrainer {
        -demo_name
        -loadDemonstration()
        -trainDemonstration()
        +run()
    }
    class MoveitUtil {
        +getMoveGroup()
        +getVisualTools()
        +currentJointState()
        +visualizeTrajectory()
        +jointToPose()
        +currentPose()
        +VisualizePosePath()
        +PlanPath()
        +executePath()
        +PlanJointAction()
    }
    class LFDPipeline {
        +run()
    }

    LFDRecorder ..> MoveitUtil
    LFDPlanner ..> MoveitUtil
    LFDPipeline ..> MoveitUtil
    LFDPipeline ..> LFDTrainer
    LFDPipeline ..> LFDPlanner
    LFDPipeline ..> LFDRecorder

